cmake_minimum_required(VERSION 2.8)
project(analyzer)

add_definitions(-D_CRT_SECURE_NO_WARNINGS)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../dist/Debug/GNU-Linux-x86/)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../dist/Debug/GNU-Linux-x86/)

#FIND_PACKAGE(PCAP REQUIRED)
#FIND_PACKAGE(EXPAT REQUIRED)


file(GLOB_RECURSE ANALYZER_SRC_C RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c)
file(GLOB_RECURSE ANALYZER_SRC_H RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h)

add_library(${PROJECT_NAME} SHARED ${ANALYZER_SRC_C})
target_link_libraries(${PROJECT_NAME} ${PCAP_LIBRARIES} ${EXPAT_LIBRARIES})
install(TARGETS ${PROJECT_NAME} DESTINATION ./)
